--- a/src/main/webapp/pages/front/css/front.css
+++ b/src/main/webapp/pages/front/css/front.css
@@ -6,7 +6,17 @@ background:url(../images/footer01.png) no-repeat; background-size:22px;
 }
 .weui-tabbar__item .foot-menu-list1{background:url(../images/footer002.png) no-repeat; background-size:22px;}
 .weui-tabbar__item .foot-menu-cart1{background:url(../images/footer003.png) no-repeat; background-size:22px;}
+.weui-tabbar__item .foot-menu-member1{background:url(../images/footer004.png) no-repeat; background-size:22px;}
 .pictureStyle{
 	width:40px;
 	hight:40px;
+}
+/* 字体大小 */
+.titlefontsize{
+	font-size:.37333rem
+}
+/* 图片长宽 */
+。headImages{
+	width:30%;
+	hight:30%;
 }
