--- a/src/main/webapp/pages/front/css/front.css
+++ b/src/main/webapp/pages/front/css/front.css
@@ -127,8 +127,8 @@ background:url(../images/footer01.png) no-repeat; background-size:22px;
 .radio, .checkbox {
     position: relative;
     display: block;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin-top: 15%;
+    margin-bottom: 15%;
 }
 
 .radio + .radio, .checkbox + .checkbox {
