引入公共的css文件，大家平时可以将一些公共的属性添加到common.css

--- a/src/main/webapp/pages/front/css/style.css
+++ b/src/main/webapp/pages/front/css/style.css
@@ -372,3 +372,22 @@ header,.weui-navbar{
 .commg{margin:0; font-size:14px;}
 .weui-cells.commg:before{display:none;}
 
+/*超链接不变色*/
+a:link {
+ text-decoration: none;
+ color:white;
+}
+a:visited {
+ text-decoration: none;
+color:white;
+}
+a:hover {
+ text-decoration: none;
+  color:white;
+}
+a:active {
+ text-decoration: none;
+  color:white;
+}
+
+
